# TravelAgencyRUST

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
assets/: client.json  itinerary.json
database/: create.sql  create_postgres.sql  travel_agency.mwb
deploy/: travelagency.yaml
deploy/k8s/: kustomization.yaml  namespace.yaml  postgres-k8s.yml  travelagency-k8s.yml
src/: main.rs  models.rs  schema.rs
src/domain/: accommodation.rs  booking.rs  itinerary_builder.rs  mod.rs  travel_insurance.rs
src/handlers/: accommodation.rs  client.rs  itinerary.rs  mod.rs  travel_insurance.rs
src/repository/: accommodation.rs  mod.rs  repository.rs  travel_insurance.rs
src/utils/: domainErrors.rs  domain_error.rs
