[package]
name = "travel_agency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
bigdecimal = { version = "0.4.2", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "bigdecimal"] }
thiserror = "1.0.51"
dotenv = "0.15.0"
async-trait = "0.1.75"
reqwest = "0.11.23"
